environments/overlays/prod/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: gateway
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http2
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    istio: gateway
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
spec:
  port:
    targetPort: http2
  to:
    kind: Service
    name: gateway
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: true
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels: {}
  name: gateway
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      istio: gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      creationTimestamp: null
      labels:
        istio: gateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - image: auto
          imagePullPolicy: Always
          name: istio-proxy
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
